<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.PizzaTowers.MainActivity">

    <ImageView
        android:id="@+id/primaryImage"
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:scaleType="centerCrop"
        android:background="@color/colorPrimaryDark"
        android:src="@drawable/pizzatowers" />


    <TextView
        android:layout_marginLeft="14dp"
        android:id="@+id/businessName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/primaryImage"
        android:text="@string/app_name"
        android:textSize="23dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginLeft="4dp"
        android:id="@+id/businessAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/businessName"
        android:layout_marginTop="20dp"
        android:text="@string/address"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/businessAddress"
        android:layout_alignBottom="@+id/businessAddress"
        android:layout_toEndOf="@+id/businessAddress"
        android:layout_toRightOf="@+id/businessAddress"
        android:text="@string/addressInfo"
        android:textSize="15dp" />

    <TextView
        android:layout_marginLeft="4dp"
        android:id="@+id/hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:text="@string/hours"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginLeft="4dp"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hours"
        android:layout_alignBottom="@+id/hours"
        android:layout_toEndOf="@+id/hours"
        android:layout_toRightOf="@+id/hours"
        android:text="@string/hoursInfo"
        android:textSize="15dp"/>

    <TextView
        android:layout_marginLeft="4dp"
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:text="@string/phone"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginLeft="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/phone"
        android:layout_alignBottom="@+id/phone"
        android:layout_toEndOf="@+id/phone"
        android:layout_toRightOf="@+id/phone"
        android:text="@string/phoneInfo"
        android:textSize="15dp"
        android:id="@+id/phoneInfo"
        />
    <com.example.android.PizzaTowers.GifImageView
        android:id="@+id/GifImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/pizza"
        android:layout_below="@+id/phoneInfo"
        android:layout_margin="50px"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/bonappetit"
        android:textSize="30dp"
        android:textStyle="bold|italic" />

</RelativeLayout>
